--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="icon" href="./img/favicon.ico">
-    <title>Pets_List for Life</title>
+    <title>PetsList for Life</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
-<div id="corps"></div>
+<div id="document"></div>
 </body>
 </html>
