--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="/img/favicon.ico">
     <title>PetsList for Life</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
